@@ -4,6 +4,15 @@
 $GALLERY_BASEDIR="../";
 @include($GALLERY_BASEDIR . "config.php"); 
 require($GALLERY_BASEDIR . "util.php");
+
+if (getOS() == OS_WINDOWS) {
+    include($GALLERY_BASEDIR . "platform/fs_win32.php");
+    if (fs_file_exists("SECURE")) {
+       print "You cannot access this file while gallery is in secure mode.";
+       exit;
+    }
+}
+
 initLanguage();
 ?>
 <html>
